--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/biryani.html">Biryani</a>
-    <p><a href="recipes/noodles.html">Noodles</a></p>
-    <p><a href="recipes/fried-chicken.html">Fried-Chicken</a></p>
+    <h1 class="headline">Odin Recipes</h1>
+    <a class="recipe" href="recipes/biryani.html">Biryani</a>
+    <p class="recipe"><a href="recipes/noodles.html">Noodles</a></p>
+    <p class="recipe"><a href="recipes/fried-chicken.html">Fried-Chicken</a></p>
+    <img src="images/eat.jpg" alt="man lying on sofa eating chips">
 </body>
 </html>
