--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="headline">Odin Recipes</h1>
+    <a href="index.html"><h1 class="headline">Odin Recipes</h1></a>
     <a class="recipe" href="recipes/biryani.html">Biryani</a>
-    <p class="recipe"><a href="recipes/noodles.html">Noodles</a></p>
-    <p class="recipe"><a href="recipes/fried-chicken.html">Fried-Chicken</a></p>
+    <p><a class="recipe" href="recipes/noodles.html">Noodles</a></p>
+    <p><a class="recipe" href="recipes/fried-chicken.html">Fried-Chicken</a></p>
     <img src="images/eat.jpg" alt="man lying on sofa eating chips">
 </body>
 </html>
